tests/NormalTests/paczka1/fuzzy1/12500201.err
Error in line 18: FklkhXM S958 k3,1
Error in line 10: F4lkhXM S780 37,6
Error in line 23: A784 A784 80,8
Error in line 20: F4lkhXM S958 2,2
Error in line 28: F4lkhXM A105 79,8
Error in line 25: A784 S958 29,0
Error in line 34: A784 A784 4,4
Error in line 19: SHS1c S780 15,5
